--- a/package.json
+++ b/package.json
@@ -5,14 +5,35 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "git": "npm run build && git add . && git commit -m",
+    "postgit": "git push && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
+    "@milkdown/core": "^6.4.1",
+    "@milkdown/preset-commonmark": "^6.4.2",
+    "@milkdown/prose": "^6.4.1",
+    "@milkdown/theme-nord": "^6.4.1",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.1",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "@milkdown/core": "^6.4.1",
+    "@milkdown/plugin-clipboard": "^6.4.1",
+    "@milkdown/plugin-collaborative": "^6.4.1",
+    "@milkdown/plugin-cursor": "^6.4.1",
+    "@milkdown/plugin-menu": "^6.4.1",
+    "@milkdown/plugin-slash": "^6.4.3",
+    "@milkdown/plugin-tooltip": "^6.4.1",
+    "@milkdown/preset-commonmark": "^6.4.2",
+    "@milkdown/preset-gfm": "^6.4.1",
+    "@milkdown/prose": "^6.4.1",
+    "@milkdown/theme-nord": "^6.4.1",
+    "y-websocket": "^1.4.5",
+    "yjs": "^13.5.41"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
