--- a/package.json
+++ b/package.json
@@ -11,7 +11,18 @@
   },
   "dependencies": {
     "@milkdown/core": "^6.4.1",
+    "@milkdown/plugin-clipboard": "^6.4.1",
+    "@milkdown/plugin-collaborative": "^6.4.1",
+    "@milkdown/plugin-cursor": "^6.4.1",
+    "@milkdown/plugin-diagram": "^6.4.1",
+    "@milkdown/plugin-emoji": "^6.4.1",
+    "@milkdown/plugin-history": "^6.4.1",
+    "@milkdown/plugin-listener": "^6.4.1",
+    "@milkdown/plugin-menu": "^6.4.1",
+    "@milkdown/plugin-slash": "^6.4.3",
+    "@milkdown/plugin-tooltip": "^6.4.1",
     "@milkdown/preset-commonmark": "^6.4.2",
+    "@milkdown/preset-gfm": "^6.4.1",
     "@milkdown/prose": "^6.4.1",
     "@milkdown/theme-nord": "^6.4.1",
     "@popperjs/core": "^2.11.6",
@@ -21,17 +32,7 @@
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
-    "@milkdown/core": "^6.4.1",
-    "@milkdown/plugin-clipboard": "^6.4.1",
-    "@milkdown/plugin-collaborative": "^6.4.1",
-    "@milkdown/plugin-cursor": "^6.4.1",
-    "@milkdown/plugin-menu": "^6.4.1",
-    "@milkdown/plugin-slash": "^6.4.3",
-    "@milkdown/plugin-tooltip": "^6.4.1",
-    "@milkdown/preset-commonmark": "^6.4.2",
-    "@milkdown/preset-gfm": "^6.4.1",
-    "@milkdown/prose": "^6.4.1",
-    "@milkdown/theme-nord": "^6.4.1",
+    "y-indexeddb": "^9.0.9",
     "y-websocket": "^1.4.5",
     "yjs": "^13.5.41"
   },
