--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@milkdown/theme-nord": "^6.4.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.1",
+    "bootstrap-vue-3": "^0.3.5",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
